--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @font-face{
-  font-family: yekan,parastoo;
-  src: url("./assets/font/Yekan.woff"),url("./assets/font/Parastoo.woff");
+  font-family: yekan,parastoo,persionSanaz,abasan;
+  src: url("./assets/font/Yekan.woff"),url("./assets/font/Parastoo.woff"),url("./assets/font/Persian-Sanaz.ttf"),url("./assets/font/pixelboy-Abasan.woff");
 }
 
 :root {
-  font-family: yekan,parastoo,Helvetica, sans-serif;
+  font-family: yekan,parastoo,abasan,Arial, Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -16,6 +16,7 @@
   -moz-osx-font-smoothing: grayscale;
 
 }
+
 
 *{
   margin: 0;
