--- a/src/pages/home/partials/headerResponsive/headerResponsive.module.css
+++ b/src/pages/home/partials/headerResponsive/headerResponsive.module.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 800px) {
+/* @media only screen and (min-width: 800px) {
   .header1 {
     display: none !important;
   }
@@ -11,7 +11,7 @@
     display: block !important;
     position: relative;
   }
-}
+} */
 @media only screen and (min-width: 1000px) {
   .searchNavbar {
     width: 30.5rem !important;
