--- a/src/pages/home/partials/headerResponsive/headerResponsive.module.css
+++ b/src/pages/home/partials/headerResponsive/headerResponsive.module.css
@@ -58,7 +58,7 @@
 }
 
 .grouping::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 2px; /* قرار دادن pseudo-element در پایین */
   left: 0;
